Removed reducer testbench, added rgb_to_ycrcb

--- a/verification/rgb_to_ycrcb/Makefile
+++ b/verification/rgb_to_ycrcb/Makefile
@@ -1,6 +1,6 @@
 TOPLEVEL_LANG = verilog
 VERILOG_SOURCES = $(shell find . -name "*.v")
-TOPLEVEL = reducer_4_to_2
-MODULE = reducer_4_to_2_tb
+TOPLEVEL = rgb_to_ycrcb
+MODULE = rgb_to_ycrcb_tb
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
