--- a/synthesis/system.qsf
+++ b/synthesis/system.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV GX"
 set_global_assignment -name DEVICE auto
-set_global_assignment -name TOP_LEVEL_ENTITY reducer_4_to_2
+set_global_assignment -name TOP_LEVEL_ENTITY rgb_to_ycrcb
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:45:26  APRIL 24, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -51,6 +51,7 @@ set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name VERILOG_FILE ../hdl/arithmetic/carry_lookahead_adder.v
 set_global_assignment -name VERILOG_FILE ../hdl/arithmetic/full_adder.v
 set_global_assignment -name VERILOG_FILE ../hdl/arithmetic/reducer_4_to_2.v
+set_global_assignment -name VERILOG_FILE ../hdl/rgb_to_ycrcb.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
